@@ -36,6 +36,8 @@ Unreleased
    HBASE-79    When HBase needs to be migrated, it should display a message on
                stdout, not just in the logs
    HBASE-495   No server address listed in .META.
+   HBASE-433 HBASE-251 Region server should delete restore log after successful
+               restore, Stuck replaying the edits of crashed machine.
 
   IMPROVEMENTS
    HADOOP-2555 Refactor the HTable#get and HTable#getRow methods to avoid
